fixed responsiveness issues on mobile

--- a/css/services.css
+++ b/css/services.css
@@ -33,6 +33,12 @@ body {
 }
 
 
+@media (max-width: 800px) {
+    html{
+        overflow-x: hidden;
+    }
+}
+
 
 /* 
 ****************************************************************************************************
